force-app/main/default/objects/Rul_Mailing_List__mdt/Rul_Mailing_List__mdt.object-meta.xml
<CustomObject>
    <label>Rul Mailing List</label>
    <pluralLabel>Rul Mailing Lists</pluralLabel>
</CustomObject>