force-app/main/default/objects/Rul_Mailing_List__mdt/fields/CCMailData2__c.field-meta.xml
<CustomField>
    <fullName>CCMailData2__c</fullName>
    <label>CCMailData2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>