force-app/main/default/objects/Rul_Mailing_List__mdt/fields/CCMailData__c.field-meta.xml
<CustomField>
    <fullName>CCMailData__c</fullName>
    <label>CCMailData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>