force-app/main/default/objects/Rul_Mailing_List__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUL</fullName>
                <default>true</default>
                <label>RUL</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Denial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>